--- a/day-2021-12-03.tests/day-2021-12-03.tests.csproj
+++ b/day-2021-12-03.tests/day-2021-12-03.tests.csproj
@@ -2,6 +2,7 @@
 
     <PropertyGroup>
         <TargetFramework>net6.0</TargetFramework>
+        <RootNamespace>day_2021_12_03.tests</RootNamespace>
         <Nullable>enable</Nullable>
 
         <IsPackable>false</IsPackable>
@@ -15,10 +16,7 @@
     </ItemGroup>
 
     <ItemGroup>
-      <ProjectReference Include="..\day-2021-12-01.app\day-2021-12-01.app.csproj" />
-      <ProjectReference Include="..\day-2021-12-02.app\day-2021-12-02.app.csproj" />
-      <ProjectReference Include="..\day-2021-12-03.app\day-2021-12-03.app.csproj" />
-      <ProjectReference Include="..\utils\utils.csproj" />
+      <ProjectReference Include="..\day-2021-12-03\day-2021-12-03.csproj" />
     </ItemGroup>
 
 </Project>
