--- a/solutions.tests/solutions.tests.csproj
+++ b/solutions.tests/solutions.tests.csproj
@@ -23,6 +23,7 @@
       <ProjectReference Include="..\day-2021-12-06.app\day-2021-12-06.app.csproj" />
       <ProjectReference Include="..\day-2021-12-07.app\day-2021-12-07.app.csproj" />
       <ProjectReference Include="..\day-2021-12-08.app\day-2021-12-08.app.csproj" />
+      <ProjectReference Include="..\day-2021-12-09.app\day-2021-12-09.app.csproj" />
       <ProjectReference Include="..\utils\utils.csproj" />
     </ItemGroup>
 
