--- a/solutions.tests/solutions.tests.csproj
+++ b/solutions.tests/solutions.tests.csproj
@@ -25,6 +25,7 @@
       <ProjectReference Include="..\day-2021-12-08.app\day-2021-12-08.app.csproj" />
       <ProjectReference Include="..\day-2021-12-09.app\day-2021-12-09.app.csproj" />
       <ProjectReference Include="..\utils\utils.csproj" />
+      <ProjectReference Include="..\day-2021-12-10.app\day-2021-12-10.app.csproj" />
     </ItemGroup>
 
 </Project>
