--- a/solutions.tests/solutions.tests.csproj
+++ b/solutions.tests/solutions.tests.csproj
@@ -30,6 +30,7 @@
       <ProjectReference Include="..\day-2021-12-12.app\day-2021-12-12.app.csproj" />
       <ProjectReference Include="..\day-2021-12-13.app\day-2021-12-13.app.csproj" />
       <ProjectReference Include="..\day-2021-12-14.app\day-2021-12-14.app.csproj" />
+      <ProjectReference Include="..\day-2021-12-15.app\day-2021-12-15.app.csproj" />
     </ItemGroup>
 
 </Project>
