--- a/solutions.tests/solutions.tests.csproj
+++ b/solutions.tests/solutions.tests.csproj
@@ -33,6 +33,7 @@
       <ProjectReference Include="..\day-2021-12-15.app\day-2021-12-15.app.csproj" />
       <ProjectReference Include="..\day-2021-12-16.app\day-2021-12-16.app.csproj" />
       <ProjectReference Include="..\day-2021-12-17.app\day-2021-12-17.app.csproj" />
+      <ProjectReference Include="..\day-2021-12-18.app\day-2021-12-18.app.csproj" />
     </ItemGroup>
 
 </Project>
